--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">GuardianSDK Sample App</string>
+    <string name="title_main">Guardian SDK</string>
+    <string name="title_enroll">Enroll account</string>
+    <string name="title_notification">Authentication request</string>
+    <string name="progress_title_please_wait">Please wait</string>
+    <string name="progress_message_unenroll">Trying to unenroll your account…</string>
+    <string name="progress_message_reject">Trying to reject the authentication request…</string>
+    <string name="progress_message_allow">Trying to allow the authentication request…</string>
+    <string name="progress_message_enroll">Trying to enroll your account…</string>
+    <string name="alert_title_error">Error</string>
+    <string name="alert_message_gcm_error">Could not obtain GCM token.\nCheck your GCM configuration and internet connection and try again later</string>
+    <string name="guardian_notification_title">Guardian notification received</string>
+    <string name="guardian_notification_text">Click to see details</string>
 </resources>
